--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site wide configuration
 
-title:            Site Title
+title:            Christhia Seva Mission
 locale:           en_US
-url:              http://localhost:4000
+#url:              http://localhost:4000
 
 
 # Jekyll configuration
@@ -26,13 +26,13 @@ kramdown:
 
 # Site owner
 owner:
-  name: Your Name
+  name: Mathew Mathai
   avatar: bio-photo.jpg
   bio: "Describe your self."
-  email: 
+  email: matt@csmforchrist.com
   disqus-shortname: 
-  twitter: #username
-  facebook: #username
+  twitter: #ChristhiaSeva
+  facebook: ChristhiaSeva
   google:
     plus: #username
     analytics: 
