--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ locale:           en_US
 
 permalink:   /:categories/:title/
 markdown:    kramdown
-highlighter: pygments
+#highlighter: pygments
 sass:
   sass_dir: _sass
   style: compressed
@@ -21,7 +21,7 @@ kramdown:
   footnote_nr: 1
   entity_output: as_char
   toc_levels: 1..6
-  use_coderay: false
+  enable_coderay: false
 
 
 # Site owner
