Updates to signup

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ kramdown:
 # Site owner
 owner:
   name: Mathew Mathai
+  organization: Christhia Seva Mission
   avatar: bio-photo.jpg
   bio: "Describe your self."
   email: matt@csmforchrist.com
