Add education section

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,7 @@
 # Site navigation links
 
+- title: Pay For A Child's Education
+  url: /education/
 - title: Stories
   url: /stories/
 - title: Subscribe
